<?xml version="1.0"?> 
<package format="2">
  <!-- This is a Catkin package.xml file to optionally support building in
       a Catkin workspace. Catkin is not required to build this package. For
       more information, see: http://ros.org/reps/rep-0136.html -->
  <name>despot</name>
  <version>0.1.0</version>
  <description>
    DESPOT is an anytime online POMDP planning algorithm that supports two
    types of POMDP models: (1) the POMDPX file format or (2) a deterministic
    simulative model in C++.
  </description>
  <url type="website">http://bigbird.comp.nus.edu.sg/pmwiki/farm/appl/index.php</url>
  <maintainer email="motion@comp.nus.edu.sg">Motion Modeling, Analysis, and Planning Lab</maintainer>
  <license>GPL</license>
  <buildtool_depend>cmake</buildtool_depend>
  <!-- These are required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
